2006-03-21  John W. Eaton  <jwe@octave.org>

	* lo-specfun.cc (betainc): Use F77_XFCN instead of F77_FUNC for
	call to xdbetai.

2006-03-21  David Bateman  <dbateman@free.fr>

	* lo-specfun.cc (xlgamma, xgamma): Trap special values.
	(xlgamma): Use F77_XFCN instead of F77_FUNC for call to dlgams.

	* dSparse.cc (solve): Add argument singular_fallback, to allow
	fallback to QR solvers to be optional.
	* CSparse.cc (solve): Ditto.
	* dSparse.h (solve): update declaration for new argument.
	* CSparse.h (solve): Ditto.
	* sparse-dmsolve.cc (dmsolve): Use singular_fallback argument
	to bypass QR solvers when solving the well determined part of
	the problem.

2006-03-17  John W. Eaton  <jwe@octave.org>

	* str-vec.cc (vector::list_in_columns): New optional arg, width.

2006-03-16  David Bateman  <dbateman@free.fr>

	* CSparse.cc: Change use of nzmax to nnz to allow automatic
	reduction of matrix size, except for a couple of cases where nzmax
	is needed.
	(zpbcon): Correct declaration of lapack zpbcon function.
	(dsolve, utsolve, ltsolve, trisolve, bsolve, factorize, fsolve): Add
	an argument to allow the calculation of condition number to be
	optional.
	(bsolve): Add code for the calculation of the condition number
	using zpbcon and zgbcon.
	(dsolve): Bug fix for rectangular matrices with sparse RHS.
	(utsolve, ltsolve, trisolve, bsolve, fsolve): Mark matrix type as
	singular if singularity is detected.
	(solve): Use optional argument to disable calculation of
	condition number for all but fsolve, for speed. Add code to 
	allow rectnagular matrices or matrices identified as singular
	to be treated.
	(lssolve): delete.
	(operator *): Don't recast real matrices as complex, but
	rather use the macro directly on the real data.
	* dSparse.cc: ditto.
	* CSparse.h (dsolve, utsolve, ltsolve, trisolve, bsolve,
	fsolve, factorize): Update declaration for new argument to
	calculate the condition number.
	(lssolve): delete.
	* dSparse.h: ditto.