@@ -1,3 +1,8 @@
+2006-03-21  David Bateman  <dbateman@free.fr>
+
+	* SparseQR.h: Publish externally used friends.
+	* SparseCmplxQR.h: ditto.
+
 2006-03-21  John W. Eaton  <jwe@octave.org>
 
 	* lo-specfun.cc (betainc): Use F77_XFCN instead of F77_FUNC for
